force-app/main/default/objects/BAMGroup__c/BAMGroup__c.object-meta.xml
<CustomObject>
    <description>Defines Groups that can be used in Merchant Portal. This is for a future state.</description>
    <label>Merchant Portal Group</label>
    <nameField>
        <label>BAM Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchant Portal Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>