force-app/main/default/objects/BAMGroup__c/fields/Despatch_Location__c.field-meta.xml
<CustomField>
    <fullName>Despatch_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Despatch Location to be linked to this Group. This is used for Parcel Send to assign a Despatch Id to the Group</description>
    <inlineHelpText>The Despatch Location to be linked to this Group. This is used for Parcel Send to assign a Despatch Id to the Group</inlineHelpText>
    <label>Despatch Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipName>BAMGroups</relationshipName>
    <type>Lookup</type>
</CustomField>