force-app/main/default/objects/BAMGroup__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Organisation this group has been created for</description>
    <inlineHelpText>The Organisation this group has been created for</inlineHelpText>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BAMGroups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>