force-app/main/default/objects/BAMGroup__c/validationRules/BAMGroupLocationValid.validationRule-meta.xml
<ValidationRule>
    <fullName>BAMGroupLocationValid</fullName>
    <active>true</active>
    <description>Ensure that a location can only be added if the organisation matches the organisation of the group.</description>
    <errorConditionFormula>!ISBLANK(Despatch_Location__c) &amp;&amp; Despatch_Location__r.Organisation__c != Organisation__c</errorConditionFormula>
    <errorMessage>Location organisation does not match group organisation</errorMessage>
</ValidationRule>